# rssensplaner

./: Cargo.toml  Dockerfile  config.default.toml
src/: calendar.rs  food.rs  main.rs  server_config.rs  shopping.rs  utils.rs
src/bring/: mod.rs  types.rs
src/db/: calendar.rs  food.rs  mod.rs  shopping.rs
src/server/: mod.rs
src/server/handlers/: bring.rs  calendar.rs  food.rs  mod.rs  shopping.rs
templates/: _layout.css  _layout.html  error.html
templates/calendar/: day.html  index.html
templates/food/: edit_food.html  edit_ingredient.html  food.html  list.html
templates/shopping/: edit_default_list.html  edit_item.html  index.html  list.html
