[package]
name = "rssensplaner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
askama = "0.12.1"
axum = "0.8.1"
bb8 = "0.9.0"
bb8-postgres = "0.9.0"
chrono = { version = "0.4.40", features = ["serde"] }
config =  { version = "0.15.11", features = ["toml"] }
reqwest = "0.12.15"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0" , features = ["rt-multi-thread"] }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
